@@ -1,4 +1,5 @@
 Sigil 0.6.0 TBA
+    - Implement issue 1428: Find&Replace should allow Ctrl/Shift key modifiers to set what to search.
     - Implement issue 1325: Insert Images support for multiple images, resizing, thumbnails.
     - Implement issue 31: Automatically set "date of modification" on save 
     - Implement issue 1508: Allow export/saving of individual files.
